<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/light_gray"
	android:orientation="vertical">

	<RelativeLayout
		android:id="@+id/title_bar"
		android:layout_width="match_parent"
		android:layout_height="40dp"
		android:background="@color/main_color"
		android:gravity="center_vertical">

		<RelativeLayout
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:gravity="center_vertical">

			<TextView
				android:id="@+id/button_back"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="20dp"
				android:text="&lt;"
				android:textSize="22sp" />

		</RelativeLayout>

		<TextView
			android:id="@+id/forget_password_title"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:gravity="center_vertical|center_horizontal"
			android:text="@string/label_reset_password"
			android:textColor="@color/white"
			android:textSize="13sp" />


	</RelativeLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:orientation="vertical">

		<View
			android:layout_width="match_parent"
			android:layout_height="0.25dp"
			android:background="@color/gray" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:gravity="center_horizontal"
			android:background="@color/white"
			android:orientation="horizontal">

			<TextView
				android:layout_width="60dp"
				android:layout_height="match_parent"
				android:layout_marginRight="40dp"
				android:gravity="right|center_vertical"
				android:text="@string/label_password"
				android:textColor="@color/black" />

			<RelativeLayout
				android:layout_width="260dp"
				android:layout_height="40dp"
				android:gravity="center_vertical">

				<EditText
					android:id="@+id/password"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:ems="11"
					android:hint="@string/label_input_password"
					android:textColorHint="@color/gray"
					android:inputType="textPassword"
					android:maxLength="11"
					android:singleLine="true"
					android:textColor="@color/black"
					android:textSize="12sp"
					android:background="@null"
					/>


			</RelativeLayout>
		</LinearLayout>


		<View
			android:layout_width="match_parent"
			android:layout_height="0.25dp"
			android:background="@color/gray" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:gravity="center_horizontal"
			android:background="@color/white"
			android:orientation="horizontal">

			<LinearLayout
				android:id="@+id/captcha_container"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginRight="8dp"
				android:orientation="horizontal">


				<TextView
					android:layout_width="60dp"
					android:layout_height="match_parent"
					android:layout_marginRight="40dp"
					android:gravity="right|center_vertical"
					android:text="@string/label_confirm_password"
					android:textColor="@color/black" />


				<EditText
					android:id="@+id/captcha_code"
					android:layout_width="260dp"
					android:layout_height="40dp"
					android:ems="10"
					android:background="@null"
					android:hint="@string/label_input_password_again"
					android:textColorHint="@color/gray"
					android:singleLine="true"
					android:textColor="@color/black"
					android:textSize="12sp"
					android:inputType="textPassword"
					/>

			</LinearLayout>

		</LinearLayout>

		<View
			android:layout_width="match_parent"
			android:layout_height="0.25dp"
			android:background="@color/gray" />

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="40dp"
			android:layout_marginTop="8dp"
			android:gravity="center_horizontal"
			android:orientation="horizontal">

			<RelativeLayout
				android:id="@+id/button_reset_password"
				android:layout_width="330dp"
				android:layout_height="match_parent">

				<RelativeLayout
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:background="@drawable/button_border_round_rect">

				</RelativeLayout>

				<TextView
					android:id="@+id/save"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:gravity="center_vertical|center_horizontal"
					android:text="@string/save"
					android:textColor="@color/white"
					android:textSize="13sp" />
			</RelativeLayout>
		</RelativeLayout>

	</LinearLayout>
</LinearLayout>
