<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
   	android:background="@color/super_light_gray"
    >

    <RelativeLayout
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
	    android:gravity="center_vertical"
   		android:background="@color/main_color"
        >
        
        <ImageView
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
	        android:gravity="center_vertical"
            android:src="@drawable/back"
            />
        
        <TextView
            android:id ="@+id/software_setting_title"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:textSize="30sp"
	        android:textColor="@color/white"
	        android:text="@string/software_setting"
	        android:gravity="center_horizontal|center_vertical"
		>
        </TextView>
        
        
    </RelativeLayout>
    
		<LinearLayout
			android:id="@+id/button_clear_cache"
			android:layout_marginTop="10dp"
			android:layout_marginBottom="10dp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
	   		android:gravity="center_horizontal"
			>
			<ImageView
				android:id="@+id/clear_cache_left"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:src="@drawable/setting_button_left_part"
				/>
			
			<TextView
				android:id="@+id/clear_cache_middle"
				android:layout_width="550dp"
				android:layout_height="wrap_content"
				android:text="@string/clear_cache"
				android:textSize="20sp"
				android:textColor="@color/dark_gray"
				android:gravity="center_vertical"
				android:background="@drawable/button_2_back"
				/>
			
		</LinearLayout>
		
		
		<LinearLayout
			android:id="@+id/button_feedback"
			android:layout_marginBottom="10dp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
	   		android:gravity="center_horizontal"
			>
			<ImageView
				android:id="@+id/feedback_left"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:src="@drawable/setting_button_left_part"
				/>
			
			<TextView
				android:id="@+id/feedback_middle"
				android:layout_width="550dp"
				android:layout_height="wrap_content"
				android:text="@string/feedback"
				android:textSize="20sp"
				android:textColor="@color/dark_gray"
				android:gravity="center_vertical"
				android:background="@drawable/button_2_back"
				/>

		</LinearLayout>
		
		<LinearLayout
			android:id="@+id/button_help"
			android:layout_marginBottom="10dp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
	   		android:gravity="center_horizontal"
			>
			<ImageView
				android:id="@+id/help_left"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:src="@drawable/setting_button_left_part"
				/>
			
			<TextView
				android:id="@+id/help_middle"
				android:layout_width="550dp"
				android:layout_height="wrap_content"
				android:text="@string/help"
				android:textSize="20sp"
				android:textColor="@color/dark_gray"
				android:gravity="center_vertical"
				android:background="@drawable/button_2_back"
				/>
			
		</LinearLayout>
		
		
		<LinearLayout
			android:id="@+id/button_about"
			android:layout_marginBottom="10dp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
	   		android:gravity="center_horizontal"
			>
			<ImageView
				android:id="@+id/about_left"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:src="@drawable/setting_button_left_part"
				/>
			
			<TextView
				android:id="@+id/about_middle"
				android:layout_width="550dp"
				android:layout_height="wrap_content"
				android:text="@string/about"
				android:textSize="20sp"
				android:textColor="@color/dark_gray"
				android:gravity="center_vertical"
				android:background="@drawable/button_2_back"
				/>
		</LinearLayout>
    
    
	
	
		<LinearLayout
			android:id="@+id/button_logout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
	        android:layout_marginTop="100dp"
	   		android:gravity="center_horizontal"
			>
			
			<TextView
				android:id="@+id/logout_middle"
		        android:layout_width="563dp"
		        android:layout_height="60dp"
				android:text="@string/logout"
				android:textColor="@color/white"
	        	android:textSize="20sp"
				android:gravity="center_vertical|center_horizontal"
			android:background="@drawable/green_button_round_rect"
				/>
			
		</LinearLayout>
		
</LinearLayout>
