<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color">

    <LinearLayout
        android:id="@+id/logo_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="650dp"
            android:scaleType="fitXY"
            android:src="@drawable/login_bg" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:orientation="horizontal">


            <TextView
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_marginRight="40dp"
                android:gravity="right|center_vertical"
                android:text="@string/label_user_name"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@null"
                android:ems="10"
                android:hint="@string/hint_input_user_name"
                android:inputType="number"
                android:maxLength="20"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_text_color"
                android:textSize="12sp">

            </EditText>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/password_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_marginRight="40dp"
                android:gravity="right|center_vertical"
                android:text="@string/label_password"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@null"
                android:ems="10"
                android:hint="@string/hint_input_password"
                android:inputType="textPassword"
                android:maxLength="20"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_text_color"
                android:textSize="12sp" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/button_login"
                android:layout_width="330dp"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_border_round_rect">

                </RelativeLayout>

                <TextView
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/button_login"
                    android:textColor="@color/light_text"
                    android:textSize="13sp" />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/forget_password_container"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            >

            <TextView
                android:id="@+id/forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:textSize="12sp"
                android:text="@string/label_forget_password"
                android:textColor="@color/button_color" />
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
